--- a/index.html
+++ b/index.html
@@ -1,13 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <link rel="stylesheet" href="assets/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Kaushan+Script|Montserrat:400,700|Roboto&display=swap"
+        rel="stylesheet">
+    <title>MoGo</title>
 </head>
-<body>
 
-    <script src="script.js"></script>
+<body>
+    <header class="header">
+        <div class="conatainer">
+            <div class="inner-container">
+                <div class="header_logo">MoGo</div>
+            <nav class="nav">
+                <a href="#">about</a>
+                <a href="#">service</a>
+                <a href="#">work</a>
+                <a href="#">blog</a>
+                <a href="#">contact</a>
+            </nav>
+            </div>
+        </div>
+    </header>
+
+    <div class="intro">
+        <div class="container">
+
+        </div>
+    </div>
+
+
+
 </body>
+
 </html>
