--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zxx">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="assets/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Kaushan+Script|Montserrat:400,700|Roboto&display=swap"
         rel="stylesheet">
     <title>MoGo</title>
@@ -13,26 +13,131 @@
 
 <body>
     <header class="header">
-        <div class="conatainer">
-            <div class="inner-container">
+        <div class="container">
+            <div class="header-inner">
                 <div class="header_logo">MoGo</div>
-            <nav class="nav">
-                <a href="#">about</a>
-                <a href="#">service</a>
-                <a href="#">work</a>
-                <a href="#">blog</a>
-                <a href="#">contact</a>
-            </nav>
+
+                <nav class="nav">
+                    <a class="nav-link" href="#">About</a>
+                    <a class="nav-link" href="#">Service</a>
+                    <a class="nav-link" href="#">Work</a>
+                    <a class="nav-link" href="#">Blog</a>
+                    <a class="nav-link" href="#">Contact</a>
+                    <a class="nav-link" href="#"><img src="img/intro/SHOPPING CART.png" alt=""></a>
+                    <a class="nav-link" href="#"><img src="img/intro/MAGNIFYING GLASS.png" alt=""></a>
+                </nav>
             </div>
         </div>
     </header>
 
     <div class="intro">
         <div class="container">
-
+            <div class="intro-inner">
+                <h2 class="intro-sup">Creative Template</h2>
+                <h1 class="intro-header">Welcome to mogo</h1>
+                <a href="#" class="intro-btn">Learn More</a>
+            </div>
         </div>
+        <div class="slider">
+            <div class="container">
+                <div class="slider-inner">
+                    <div class="slider-item active">
+                        <span class="slider-num">1</span> Intro
+                    </div>
+                    <div class="slider-item">
+                        <span class="slider-num">2</span> Work
+                    </div>
+                    <div class="slider-item">
+                        <span class="slider-num">3</span> Contacts
+                    </div>
+                    <div class="slider-item">
+                        <span class="slider-num">4</span> About
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
     </div>
 
+
+    <section class="section">
+        <div class="container">
+            <div class="section-header">
+                <h3 class="section-suptitle">What we do</h3>
+                <h2 class="section-title">Story about us</h2>
+
+                <div class="section-text">
+                    <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                        incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+                        ullamco laboris nisi ut aliquip ex ea commo</p>
+                </div>
+            </div>
+
+            <div class="about">
+                <div class="about-item">
+                    <div class="about-img">
+                        <img src="img/about/about_us1.jpg" alt="about_us1.jpg">
+                    </div>
+                    <div class="about-text">
+                        <div class="users">
+                            <img src="img/about/USERS.png" alt="">
+                        </div>
+                        Super team
+                    </div>
+                </div>
+                <div class="about-item">
+                    <div class="about-img">
+                        <img src="img/about/about_us2.jpg" alt="about_us2.jpg">
+                    </div>
+                    <div class="about-text">
+                        <div class="users">
+                            <img src="img/about/USERS.png" alt="">
+                        </div>
+                        Super team
+                    </div>
+                </div>
+                <div class="about-item">
+                    <div class="about-img">
+                        <img src="img/about/about_us3.jpg" alt="about_us3.jpg">
+                    </div>
+                    <div class="about-text">
+                        <div class="users">
+                            <img src="img/about/USERS.png" alt="">
+                        </div>
+                        Super team
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <div class="statistics">
+        <div class="container">
+            <div class="stat">
+                <div class="stat-item">
+                    <div class="stat-num">42</div>
+                    <div class="stat-text">Web Design Projects</div>
+                </div>
+                <div class="stat-item">
+                    <div class="stat-num">123</div>
+                    <div class="stat-text">Happy client</div>
+                </div>
+                <div class="stat-item">
+                    <div class="stat-num">15</div>
+                    <div class="stat-text">Award winner</div>
+                </div>
+                <div class="stat-item">
+                    <div class="stat-num">99</div>
+                    <div class="stat-text">Cup of coffee</div>
+                </div>
+                <div class="stat-item">
+                    <div class="stat-num">24</div>
+                    <div class="stat-text">Members</div>
+                </div>
+            </div>
+        </div>
+    </div>
 
 
 </body>
