--- a/index.html
+++ b/index.html
@@ -140,6 +140,95 @@
     </div>
 
 
+    <section class="section">
+        <div class="container">
+            <div class="section-header">
+                <h3 class="section-suptitle">We work with</h3>
+                <h2 class="section-title">Amazing services</h2>
+            </div>
+
+            <div class="services">
+                <div class="services-item">
+                    <img class="services-icon" src="img/services/IMAGE1.png" alt="services/IMAGE1" class="services-img">
+                    <div class="services-title">Photography</div>
+                    <div class="services-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                        tempor.
+                    </div>
+                </div>
+
+                <div class="services-item">
+                    <img class="services-icon" src="img/services/IMAGE2.png" alt="services/IMAGE2" class="services-img">
+                    <div class="services-title">Web design</div>
+                    <div class="services-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                        tempor.
+                    </div>
+                </div>
+                <div class="services-item">
+                    <img class="services-icon" src="img/services/IMAGE3.png" alt="services/IMAGE3" class="services-img">
+                    <div class="services-title">Creativity</div>
+                    <div class="services-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                        tempor.
+                    </div>
+                </div>
+            </div>
+
+            <hr>
+
+            <div class="services">
+                <div class="services-item">
+                    <img class="services-icon" src="img/services/IMAGE4.png" alt="services/IMAGE4" class="services-img">
+                    <div class="services-title">SEO</div>
+                    <div class="services-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                        tempor.
+                    </div>
+                </div>
+                <div class="services-item">
+                    <img class="services-icon" src="img/services/IMAGE5.png" alt="services/IMAGE5" class="services-img">
+                    <div class="services-title">CSS/HTML</div>
+                    <div class="services-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                        tempor.
+                    </div>
+                </div>
+                <div class="services-item">
+                    <img class="services-icon" src="img/services/IMAGE6.png" alt="services/IMAGE6" class="services-img">
+                    <div class="services-title">Digital</div>
+                    <div class="services-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                        tempor.
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    
+    <section class="section section--devices">
+        <div class="container">
+            <div class="section-header">
+                <h3 class="section-suptitle">For all devices</h3>
+                <h2 class="section-title">Unique design</h2>
+            </div>
+        
+            <div class="devices">
+                <img class="devices-item" src="img/devices/ipad.png" alt="design/ipad.png">
+                <img class="devices-item devices-item--iphone" src="img/devices/phone.png" alt="design/phone.png">
+            </div>
+        </div>
+    </section>
+
+    <section class="section">
+        <div class="container">
+            <div class="section-header">
+                <h3 class="section-suptitle">Service</h3>
+                <h2 class="section-title">What we do</h2>
+
+                <div class="section-text">
+                    <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                        incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+                        ullamco laboris nisi ut aliquip ex ea commo</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
 </body>
 
 </html>
