--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/style.css">
-    <link href="https://fonts.googleapis.com/css?family=Kaushan+Script|Montserrat:400,700|Roboto&display=swap"
+    <link href="https://fonts.googleapis.com/css?family=Kaushan+Script|Montserrat:400,700|Roboto:300i,400&display=swap"
         rel="stylesheet">
     <title>MoGo</title>
 </head>
@@ -199,14 +199,14 @@
             </div>
         </div>
     </section>
-    
+
     <section class="section section--devices">
         <div class="container">
             <div class="section-header">
                 <h3 class="section-suptitle">For all devices</h3>
                 <h2 class="section-title">Unique design</h2>
             </div>
-        
+
             <div class="devices">
                 <img class="devices-item" src="img/devices/ipad.png" alt="design/ipad.png">
                 <img class="devices-item devices-item--iphone" src="img/devices/phone.png" alt="design/phone.png">
@@ -226,8 +226,80 @@
                         ullamco laboris nisi ut aliquip ex ea commo</p>
                 </div>
             </div>
+
+            <div class="service">
+                <div class="service-item">
+                    <img src="img/service/image1.png" alt="service/image1">
+                </div>
+                <div class="service-item">
+                    <div class="accordion">
+                        <div class="accordion-item active">
+                            <div class="accordion-header">
+                                <img class="accordion-icon" src="img/service/PICTURE.png" alt="service/PICTURE">
+                                <div class="accordion-title">Photography</div>
+                            </div>
+                            <div class="accordion-content">
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                                    incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+                                    exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
+                                    irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+                                    pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
+                                    deserunt mollit anim id est laborum.</p>
+                            </div>
+                        </div>
+                        <div class="accordion-item">
+                            <div class="accordion-header">
+                                <img class="accordion-icon" src="img/service/EQUALIZER.png" alt="service/EQUALIZER.png">
+                                <div class="accordion-title">Creativity</div>
+                            </div>
+                            <div class="accordion-content">
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                                    incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+                                    exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
+                                    irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+                                    pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
+                                    deserunt mollit anim id est laborum.</p>
+                            </div>
+                        </div>
+                        <div class="accordion-item">
+                            <div class="accordion-header">
+                                <img class="accordion-icon" src="img/service/BULLSEYE.png" alt="service/BULLSEYE.png">
+                                <div class="accordion-title">Web Design</div>
+                            </div>
+                            <div class="accordion-content">
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                                    incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+                                    exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
+                                    irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+                                    pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
+                                    deserunt mollit anim id est laborum.</p>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
         </div>
     </section>
+
+    <div class="section section--grey">
+        <div class="container">
+            <div class="reviews">
+                <a href="" class="reviews-btn reviews-btn__prev">Prev</a>
+                <a href="" class="reviews-btn reviews-btn__next">Next</a>
+                <div class="reviews-item">
+                    <div class="reviews__photo">
+                        <img src="img/reviews/SPEECH 4.png" alt="">
+                    </div>
+                    <div class="reviews__text">
+                        “Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.”
+                    </div>
+                    <div class="reviews__author">Jon Doe</div>
+                </div>
+            </div>
+        </div>
+    </div>
 
 </body>
 
