--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
         </div>
     </section>
 
-    <!-- <div class="section section--grey">
+    <div class="section section--grey">
         <div class="container">
             <div class="reviews">
                 <a href="" class="reviews-btn reviews-btn__prev">Prev</a>
@@ -299,7 +299,7 @@
                 </div>
             </div>
         </div>
-    </div> -->
+    </div>
 
 </body>
 
