--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Kaushan+Script|Montserrat:400,700|Roboto:300i,400&display=swap"
         rel="stylesheet">
+
+
     <title>MoGo</title>
 </head>
 
@@ -74,38 +76,44 @@
                 </div>
             </div>
 
-            <div class="about">
-                <div class="about-item">
-                    <div class="about-img">
-                        <img src="img/about/about_us1.jpg" alt="about_us1.jpg">
-                    </div>
-                    <div class="about-text">
-                        <div class="users">
-                            <img src="img/about/USERS.png" alt="">
+            <div class="card">
+                <div class="card-item">
+                    <div class="card-inner">
+                        <div class="card-img">
+                            <img src="img/about/about_us1.jpg" alt="about_us1.jpg">
                         </div>
-                        Super team
+                        <div class="card-text">
+                            <div class="users">
+                                <img src="img/about/USERS.png" alt="">
+                            </div>
+                            Super team
+                        </div>
                     </div>
                 </div>
-                <div class="about-item">
-                    <div class="about-img">
-                        <img src="img/about/about_us2.jpg" alt="about_us2.jpg">
-                    </div>
-                    <div class="about-text">
-                        <div class="users">
-                            <img src="img/about/USERS.png" alt="">
+                <div class="card-item">
+                    <div class="card-inner">
+                        <div class="card-img">
+                            <img src="img/about/about_us2.jpg" alt="about_us2.jpg">
                         </div>
-                        Super team
+                        <div class="card-text">
+                            <div class="users">
+                                <img src="img/about/USERS.png" alt="">
+                            </div>
+                            Super team
+                        </div>
                     </div>
                 </div>
-                <div class="about-item">
-                    <div class="about-img">
-                        <img src="img/about/about_us3.jpg" alt="about_us3.jpg">
-                    </div>
-                    <div class="about-text">
-                        <div class="users">
-                            <img src="img/about/USERS.png" alt="">
+                <div class="card-item">
+                    <div class="card-inner">
+                        <div class="card-img">
+                            <img src="img/about/about_us3.jpg" alt="about_us3.jpg">
                         </div>
-                        Super team
+                        <div class="card-text">
+                            <div class="users">
+                                <img src="img/about/USERS.png" alt="">
+                            </div>
+                            Super team
+                        </div>
                     </div>
                 </div>
             </div>
@@ -300,7 +308,89 @@
             </div>
         </div>
     </div>
+    <section class="section">
+        <div class="container">
+            <div class="section-header">
+                <h3 class="section-suptitle">Who we are</h3>
+                <h2 class="section-title">Meet our team</h2>
+            </div>
 
+            <div class="section-text">
+                <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                    incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+                    ullamco laboris nisi ut aliquip ex ea commo</p>
+            </div>
+
+            <div class="card">
+                <div class="card-item">
+                    <div class="card-inner">
+                        <div class="card-img">
+                            <img src="img/who_we_are/photo 1.png" alt="photo1">
+                        </div>
+                        <div class="card-text">
+                            <div class="social">
+                                <a href="#" target="_blank" class="social-item"><i class="fab fa-facebook-f"></i></a>
+                                <a href="#" target="_blank" class="social-item"><i class="fab fa-twitter"></i></a>
+                                <a href="#" target="_blank" class="social-item"><i class="fab fa-pinterest-p"></i></a>
+                                <a href="#" target="_blank" class="social-item"><i class="fab fa-instagram"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card-info">
+                        <div class="card-name">Matthew Dix</div>
+                        <div class="card-prof">Graphic Design</div>
+                    </div>
+                </div>
+                <div class="card-item">
+                    <div class="card-inner">
+                        <div class="card-img">
+                            <img src="img/who_we_are/photo 2.png" alt="photo2">
+                        </div>
+                        <div class="card-text">
+                            <div class="social">
+                                <a href="#" target="_blank" class="social-item"><i class="fab fa-facebook-f"></i></a>
+                                <a href="#" target="_blank" class="social-item"><i class="fab fa-twitter"></i></a>
+                                <a href="#" target="_blank" class="social-item"><i class="fab fa-pinterest-p"></i></a>
+                                <a href="#" target="_blank" class="social-item"><i class="fab fa-instagram"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card-info">
+                        <div class="card-name">Christopher Campbell</div>
+                        <div class="card-prof">Branding/UX design</div>
+                    </div>
+                </div>
+                <div class="card-item">
+                    <div class="card-inner">
+                        <div class="card-img">
+                            <img src="img/who_we_are/photo 3.png" alt="photo3">
+                        </div>
+                        <div class="card-text">
+                            <div class="social">
+                                <a href="#" target="_blank" class="social-item"><i class="fab fa-facebook-f"></i></a>
+                                <a href="#" target="_blank" class="social-item"><i class="fab fa-twitter"></i></a>
+                                <a href="#" target="_blank" class="social-item"><i class="fab fa-pinterest-p"></i></a>
+                                <a href="#" target="_blank" class="social-item"><i class="fab fa-instagram"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card-info">
+                        <div class="card-name">Michael Fertig</div>
+                        <div class="card-prof">Developer</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <div class="section section--grey">
+        <div class="container">
+
+            <div class="logos">
+                <img src="img/who_we_are/logos.png" alt="logos">
+            </div>
+        </div>
+    </div>
+    <script src="https://kit.fontawesome.com/9b4c947104.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
